# MISW4301-cloudnative-broker

./: README.md
Sprint1/: README.md  config.yaml
Sprint1/docs/: README.md  deployment-view.md  development-view.md  functional-view.md  information-view.md
Sprint1/k8s/: offers-app-service.yaml  offers-db-service.yaml  offers-network.yaml  posts-app-service.yaml  posts-db-service.yaml  posts-networks.yaml  routes-app.yaml  routes-network.yaml  users-app-service.yaml  users-db-service.yaml  users-network.yaml
Sprint1/offers_app/: schemas.py
Sprint1/posts_app/: Dockerfile
Sprint1/routes_app/: Dockerfile  README.md
Sprint1/users_app/: Dockerfile  app.py  pytest.ini  requirements.txt  schemas.py
Sprint2/: README.md  config.yaml  makefile
Sprint2/addition/: Dockerfile
Sprint2/aggregator_service/: Dockerfile  requirements.txt
Sprint2/consumer/: Dockerfile
Sprint2/docs/: README.md  deployment-view.md  development-view.md  functional-view.md  information-view.md
Sprint2/k8s/: complete_ingress.yaml  offers-db-service.yaml  publisher_deployment.yaml  real_addition_deployment.yaml  real_multiplication_deployment.yaml  real_offers_deployment.yaml  real_posts_deployment.yaml  real_scores_deployment.yaml  real_users_deployment.yaml  routes-db.yaml  scores-db.yaml
Sprint2/multiplication/: pyproject.toml
Sprint2/multiplication/src/: main.py
Sprint2/posts_app/: Dockerfile  schemas.py
Sprint2/publisher/: Dockerfile
Sprint2/routes_app/: run_tests.py
Sprint2/subscriber/: pyproject.toml
Sprint3/: .gitignore  README.md  config.yaml
Sprint3/docs/: README.md  (+8 more)
(+168 files in other folders)
